Add Maven Dependencies

--- a/StoreBase/pom.xml
+++ b/StoreBase/pom.xml
@@ -186,6 +186,18 @@
             <version>1.4.3</version>
         </dependency>
 
+        <!-- Persistence API -->
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>3.6.10.Final</version>
+        </dependency>
+
     </dependencies>
 
 </project>
